--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,22 +1,13 @@
-<h1>Bienvenu sur JozyCocktail</h1>
-
-<h1 class="text-center">Cocktails</h1>
 
 
-
-  <div class="container col-8 mt-5">
-    <div class="card-columns">
-      <% @cocktails.each do |cocktail| %>
-        <div class="card mr-2 mt-2" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title"><%= link_to cocktail.name, cocktail_path(cocktail) %></h5>
-          </div>
-        </div>
-      <% end %>
+<div class="wrapper">
+  <% @cocktails.each do |cocktail| %>
+  <div class="card-product">
+    <img src="https://images.unsplash.com/photo-1496318447583-f524534e9ce1?ixlib=rb-1.2.1&auto=format&fit=crop&w=1105&q=80" />
+      <div class="card-product-infos">
+          <%= link_to cocktail.name, cocktail_path(cocktail)%>
+      </div>
     </div>
-  </div>
-
-
-  <%= link_to "add new cocktail",  new_cocktail_path %>
-</ul>
-
+  <% end %>
+  
+</div>  
