--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
   <div class="container">
     <h1 style="text-align:center;">Jozycocktails</h1>
     <p style="text-align:center;">Learn how to prepare craaaaazy good cocktails and save your best recipies in a few clicks</p>
-    <a class="btn btn-flat" href="http://localhost:3000/cocktails/new" style="max-width:450px; display: block;margin : auto;">Add a new Cocktail now</a>
+    <%= link_to 'Add new cocktail', new_cocktail_path%>
   </div>
 </div>
     <%= yield %>
