--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -23,5 +23,7 @@
 <% end %>
 </div>
 
-<%= link_to 'Back', root_path %>
+    <div class="btn btn-flat" href="#">
+      <%= link_to 'Back', root_path %>
+    </div>
 </div>
