--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -20,9 +20,16 @@
     transition: background 0.3s ease;
   }
   
-  .btn-flat:hover {
-    background: grey;
+  .btn-flat a {
+    color: grey;
+  }
+
+  .btn-flat a:hover {
     color: beige;
+  }
+
+  .btn-flat:hover {
+    background: pink;
   }
   
   .btn-gradient {
