--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -3,11 +3,13 @@
 <div class="wrapper">
   <% @cocktails.each do |cocktail| %>
   <div class="card-product">
-    <img src="https://images.unsplash.com/photo-1496318447583-f524534e9ce1?ixlib=rb-1.2.1&auto=format&fit=crop&w=1105&q=80" />
+    <%= cl_image_tag cocktail.photo.key, height: 300, width: 400, crop: :fill %>
       <div class="card-product-infos">
           <%= link_to cocktail.name, cocktail_path(cocktail)%>
       </div>
     </div>
   <% end %>
+
+
   
 </div>  
