--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -10,8 +10,7 @@
 
 <br><br><br>
 
-    <div class="btn btn-flat" href="#">
-      <%= link_to 'Back', root_path %>
-    </div>
+      <%= link_to 'Back', root_path, class:"btn btn-flat"%>
+
 </div>
 </div>
