--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -23,7 +23,6 @@
 <% end %>
 </div>
 
-    <div class="btn btn-flat" href="#">
-      <%= link_to 'Back', root_path %>
-    </div>
+
+      <%= link_to 'Back', root_path, class:"btn btn-flat" %>
 </div>
