--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,9 +17,9 @@
   <div class="container">
     <h1 style="text-align:center;">Jozycocktails</h1>
     <p style="text-align:center;">Learn how to prepare craaaaazy good cocktails and save your best recipies in a few clicks</p>
-    <div class="btn btn-flat" href="#">
-    <%= link_to 'Add new cocktail', new_cocktail_path%>
-    </div>
+
+      <%= link_to 'Add new cocktail', new_cocktail_path, class:"btn btn-flat"%>
+
   </div>
 </div>
     <%= yield %>
