--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,7 @@
   <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1541975902628-b157a9411603?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1047&q=80);">
   <div class="container">
     <h1 style="text-align:center;">Jozycocktails</h1>
-    <p style="text-align:center;">Learn how to prepare craaaaazy good cocktails and save your best recipies in a few clicks</p>
-
+    <p><span id="banner-typed-text", style="color:white;"></span></p>
       <%= link_to 'Add new cocktail', new_cocktail_path, class:"btn btn-flat"%>
 
   </div>
